<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- GLOBAL -->
    <string name="app_name">FrigoShare</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search leftovers</string>

    <!-- MARKET -->
    <string name="tab1">Market</string>
    <string name="tab2">Neighbourhood</string>
    <string name="search_btn_txt">Search</string>
    <string name="offer_btn_txt">Offer</string>
    <string name="pending_claims_txt">My Pending Claims</string>
    <string name="refresh_data_txt">Refresh</string>
    <string name="preferences_txt">Preferences</string>

    <!-- SEARCH -->
    <string name="s_tab1">New</string>
    <string name="s_tab2">Last Minute</string>
    <string name="s_tab3">Neighbourhood</string>
    <string name="filter_all_txt">All offers</string>
    <string name="filter_friends_txt">Offers of friends</string>
    <string name="filter_friends_of_friends_txt">Offers of friends of friends</string>

    <!-- LOGIN -->
    <string name="welcome_txt">Welcome!</string>
    <string name="info_txt">FrigoShare allows you to share leftovers with your friends,
        instead of throwing them away or seeing something living in your fridge.</string>
    <string name="fb_btn_txt">Log in with Facebook</string>
    <string name="gp_btn_txt">Log in with Google+</string>
    <string name="tw_btn_txt">Log in with Twitter</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="about_txt">
        <![CDATA[<b>Who are we?</b><br/>We’re three computer scientists a.k.a. ‘anarCHI’ that created an application ‘FrigoShare’ for the course Userinterfaces at the KU Leuven that allows students to share their leftovers (we’re talking about food). If you want to know more about our project, take a look at our blog which illustrates our mighty quest for epic loot and our (notorious) progress. If you have some thoughts or ideas, just leave a comment.<br/><br/><b>Why do we need it?</b><br/>While using this application ‘FrigoShare’, you will not have to start a food marathon Thursday evening, you will not have to throw away your leftovers to stimulate a cat serenade and you will not realize that there’s something living in your fridge Monday morning.<br/><br/><b>What do we expect from you?</b><br/>We hope that you’re willing to test our application and that you’re willing to give some feedback. Just leave some comments at our <a href=\"http://anarchikul.wordpress.com\">blog</a> and fill in our <a href=\"https://docs.google.com/forms/d/1Piw5rf_iBebccC_pMQbK2MHfuU_qKoZeypWTIQS64Gg/viewform\">questionnaire</a>.</b>]]></string>
    <string name="title_activity_market_search">Search</string>
    <string name="title_activity_offer_time_select">Create Time Slot</string>
    <string name="title_activity_market_category_search">Search categories</string>

    <!-- Create offer -->
    <string name="offer_title_name">Title</string>
    <string name="offer_title_timeslots">Time Slots</string>
    <string name="offer_hint_title">Add a title here</string>
    <string name="offer_hint_description">Add a description here</string>
    <string name="offer_hint_address">Add a pickup address here</string>
    <string name="offer_btn_confirm">Confirm</string>
    <string name="offer_btn_cancel">Cancel</string>
    <string name="offer_btn_add_timeslot">Add time slot</string>
    <string name="lelftover_title_timeslots">Click on an available time slot</string>

    <!-- Create Timeslot -->
    <string name="timeselect_title_date">Date</string>
    <string name="timeselect_title_endtime">End time</string>
    <string name="timeselect_title_starttime">Start time</string>
    <string name="timeselect_btn_cancel">Cancel</string>
    <string name="timeselect_btn_confirm">Ok</string>

    <!-- Offer title list -->
    <string name="offer_title_title">Title</string>

    <!-- Offer detail list -->
    <string name="offer_title_category">Category</string>
    <string name="offer_title_description">Description</string>
    <string name="offer_title_address">Address</string>
    <string name="offer_title_owner">Owner</string>
    <string name="dialog_title_wrong_time">Wrong Time</string>
    <string name="dialog_wrong_time">Start time should be before end time.</string>
    <string name="dialog_title_leftover_db_error">Database Error</string>
    <string name="dialog_leftover_db_error">Can\'t connect to leftover database, please try again later.</string>
    <string name="dialog_title_leftover_claim_error">Claim error</string>
    <string name="dialog_leftover_claim_error">Can\'t claim leftover, it can be claimed already or the database is unavailable.</string>
    <string name="title_activity_market_offer">Create leftover</string>
    <string name="reserve_entry_title">Reserve entry</string>
    <string name="reserve_entry_message">Are you sure you want to reserve this entry?</string>
    <string name="offer_title_claimer">Claimer</string>
    <string name="claim_detail_unclaimed">Unclaimed</string>
    <string name="search_no_leftovers">No leftovers</string>

    <!-- Unsorted -->

    <string name="title_activity_preferences">Preferences</string>
    <string name="preferences_title_address">Default home address</string>
    <string name="preferences_address">Living in the woods.</string>
    <string name="preferences_title_visibility">Visibility</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

</resources>
