<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.frigoshare.MarketSearchActivity" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh_data_txt"
        app:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
    />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/filter_all"
        android:title="@string/filter_all_txt"
        android:orderInCategory="100"
        app:showAsAction="never"
     />

    <item
        android:id="@+id/filter_f"
        android:title="@string/filter_friends_txt"
        android:orderInCategory="100"
        app:showAsAction="never"
     />

    <item
        android:id="@+id/filter_fof"
        android:title="@string/filter_friends_of_friends_txt"
        android:orderInCategory="100"
        app:showAsAction="never"
     />
</menu>
