<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/VerticalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/preferences_title_address"
            style="@style/titleText"
            android:text="@string/preferences_title_address" />

        <EditText
            android:id="@+id/preferences_address"
            style="@style/editableText"
            android:layout_marginBottom="14dp"
            android:hint="@string/preferences_address" />

        <TextView
            android:id="@+id/preferences_title_visibility"
            style="@style/titleText"
            android:text="@string/preferences_title_visibility" />

        <Spinner
            android:id="@+id/preferences_spinner_visibility"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@android:drawable/btn_dropdown" />

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_save"
                style="@style/Button"
                android:onClick="saveSettings"
                android:text="@string/btn_save" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Button"
                android:onClick="cancelSettings"
                android:text="@string/btn_cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>