<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vertical_list_offer_detail"
    android:background="@color/leftoverGroupColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp"
    android:layout_margin="16dp"
    tools:context="com.frigoshare.MarketSearchActivity">

    <TextView
        android:id="@+id/offer_detail_titleDescription"
        style="@style/titleText"
        android:text="@string/offer_title_description" />

    <TextView
        android:id="@+id/offer_detail_discription"
        style="@style/regularText"
        android:text="@string/offer_title_description" />

    <View style="@style/horizontal_line" />

    <TextView
        android:id="@+id/offer_detail_titleOwner"
        style="@style/titleText"
        android:text="@string/offer_title_owner" />

    <TextView
        android:id="@+id/offer_detail_owner"
        style="@style/regularText"
        android:text="@string/offer_title_owner" />

    <View style="@style/horizontal_line" />

    <TextView
        android:id="@+id/offer_detail_titleAddress"
        style="@style/titleText"
        android:text="@string/offer_title_address" />

    <TextView
        android:id="@+id/offer_detail_address"
        style="@style/regularText"
        android:text="@string/offer_title_address" />

    <View style="@style/horizontal_line" />

    <TextView
        android:id="@+id/offer_detail_titleTimeSlots"
        style="@style/titleText"
        android:text="@string/lelftover_title_timeslots" />

    <!-- Linear list dynamically added in code!-->

</LinearLayout>
